--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,3 @@
-ul {
-  list-style: none;
-  text-align: center;
-  width: 1000px;
-}
-
-ul li {
-  width: 200px;
-  height: 200px;
-  overflow: hidden;
-  float: left;
-}
-
-ul img {
-  width: 100%;
-  height: 100%;
-}
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -63,6 +45,31 @@ q:before, q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+#carousele {
+  width: 400px;
+  height: 200px;
+  border: solid blue 4px;
+  overflow: hidden;
+  margin: auto;
+}
+
+ul {
+  width: 2000px;
+  height: 200px;
+}
+
+ul li {
+  width: 400px;
+  height: 200px;
+  list-style: none;
+  float: left;
+}
+
+ul img {
+  width: 400px;
+  height: 200px;
 }
 
 /*# sourceMappingURL=style.css.map */
