--- a/sass/style.scss
+++ b/sass/style.scss
@@ -44,9 +44,9 @@ table {
 #carousele {
 	width: 400px;
 	height: 200px;
-	border: solid blue 4px;
+	border: solid rgb(85, 85, 88) 4px;
 	overflow: hidden;
-	margin: auto;
+	margin: 100px auto;
 }
 ul {
 	width: 2000px;
