--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,6 @@ table {
   width: 400px;
   height: 200px;
   border: solid #555558 4px;
-  overflow: hidden;
   margin: 100px auto;
 }
 
@@ -70,6 +69,10 @@ ul li {
 ul img {
   width: 400px;
   height: 200px;
+}
+
+i {
+  color: black;
 }
 
 /*# sourceMappingURL=style.css.map */
