--- a/css/style.prefixed.css
+++ b/css/style.prefixed.css
@@ -12,7 +12,7 @@ blockquote:before, blockquote:after, q:before, q:after { content: ''; content: n
 
 table { border-collapse: collapse; border-spacing: 0; }
 
-#carousele { width: 400px; height: 200px; border: solid #555558 4px; overflow: hidden; margin-top: 100px; }
+#carousele { width: 400px; height: 200px; border: solid #555558 4px; overflow: hidden; margin: 100px auto; }
 
 ul { width: 2000px; height: 200px; }
 
