--- a/sass/style.scss
+++ b/sass/style.scss
@@ -45,7 +45,7 @@ table {
 	width: 400px;
 	height: 200px;
 	border: solid rgb(85, 85, 88) 4px;
-	//overflow: hidden;
+	overflow: hidden;
 	margin: 100px auto;
 }
 ul {
